nieuwe images maken

--- a/new_images.ipynb
+++ b/new_images.ipynb
@@ -18,27 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 207,
    "id": "3ae14af4-90ad-47e5-aa74-9bbd826a347b",
    "metadata": {},
    "outputs": [],
    "source": [
     "folder = 'Train'\n",
-    "folder_with_new_images = 'new_train'"
+    "folder_with_new_images = 'new_train'\n",
+    "csv = 'train.csv'\n",
+    "csv_for_new_images = 'new_train.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 212,
    "id": "4327ae7f-9bdc-4de3-8c72-becc06bacd72",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Preprocessing:\n",
-    "    def __init__(self, data_path):\n",
+    "    def __init__(self, data_path, csv_path):\n",
     "        self.data_path = data_path\n",
     "        self.images = [f'{data_path}/{image_path}' for image_path in os.listdir(data_path)]\n",
     "        self.image_nr = 0\n",
+    "        self.df = pd.read_csv(csv_path)\n",
     "\n",
     "    def show_image(self, image):\n",
     "        cv.imshow('Image', image)\n",
@@ -63,7 +66,6 @@
     "            cv.imwrite(f'{folder_with_new_images}/{self.image_nr}.jpg', image)\n",
     "            self.image_nr += 1\n",
     "            \n",
-    "\n",
     "    def get_new_images(self):\n",
     "        for image_path in self.images:\n",
     "            image = cv.imread(image_path)\n",
@@ -73,33 +75,52 @@
     "            image = cv.imread(image_path)\n",
     "            image = cv.flip(image, 1)\n",
     "            self.create_permutations(image)\n",
+    "\n",
+    "    def get_new_train_csv(self):\n",
+    "        df_duplicates = self.df.reindex(self.df.index.repeat(24)).reset_index(drop=True)\n",
+    "\n",
+    "        df_duplicates = pd.concat([df_duplicates, df_duplicates])\n",
+    "        df_duplicates['House ID'] = range(0, len(df_duplicates))\n",
+    "        \n",
+    "        df_duplicates = df_duplicates.reset_index(drop=True)\n",
+    "        df_duplicates.to_csv(csv_for_new_images, index=False)\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 213,
    "id": "ddd5f5b3-6f16-48b4-870c-40555fdbe86d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp = Preprocessing(folder)"
+    "pp = Preprocessing(folder, csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "id": "0cc28891-30ac-46df-b172-45a3a5dc09f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp.get_new_images()"
+    "# pp.get_new_images()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "da1751ab-d280-4de3-9d65-6d858c071ccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp.get_new_train_csv()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1751ab-d280-4de3-9d65-6d858c071ccf",
+   "id": "216ed2bc-0de2-473d-bf9b-d411889680fa",
    "metadata": {},
    "outputs": [],
    "source": []
