--- a/new_images.ipynb
+++ b/new_images.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "f1babb53-287c-4224-8a5e-c98ea47b0eb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
+    "import random\n",
     "import itertools\n",
     "import cv2 as cv\n",
     "import numpy as np\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "id": "3ae14af4-90ad-47e5-aa74-9bbd826a347b",
    "metadata": {},
    "outputs": [],
@@ -31,14 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "id": "4327ae7f-9bdc-4de3-8c72-becc06bacd72",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Preprocessing:\n",
-    "    def __init__(self, data_path, csv_path):\n",
+    "    def __init__(self, data_path, csv_path, new_data_path, new_csv_path):\n",
     "        self.data_path = data_path\n",
+    "        self.new_data_path = new_data_path\n",
+    "        self.new_csv_path = new_csv_path\n",
+    "        \n",
     "        self.images = [f'{data_path}/{image_path}' for image_path in os.listdir(data_path)]\n",
     "        self.image_nr = 0\n",
     "        self.df = pd.read_csv(csv_path)\n",
@@ -63,7 +67,7 @@
     "            top_image = np.concatenate((permutation[0], permutation[1]), axis=1)\n",
     "            bottom_image = np.concatenate((permutation[2], permutation[3]), axis=1)\n",
     "            image = np.concatenate((top_image, bottom_image), axis=0)\n",
-    "            cv.imwrite(f'{folder_with_new_images}/{self.image_nr}.jpg', image)\n",
+    "            cv.imwrite(f'{self.new_data_path}/{self.image_nr}.jpg', image)\n",
     "            self.image_nr += 1\n",
     "            \n",
     "    def get_new_images(self):\n",
@@ -83,47 +87,44 @@
     "        df_duplicates['House ID'] = range(0, len(df_duplicates))\n",
     "        \n",
     "        df_duplicates = df_duplicates.reset_index(drop=True)\n",
-    "        df_duplicates.to_csv(csv_for_new_images, index=False)\n",
+    "        df_duplicates.to_csv(self.new_csv_path, index=False)\n",
+    "\n",
+    "    def shuffle_images(self):\n",
+    "        numbers = list(range(len(os.listdir(self.new_data_path))))\n",
+    "        random.shuffle(numbers)\n",
+    "        \n",
+    "        df = pd.read_csv(self.new_csv_path)\n",
+    "        df['House ID'] = numbers\n",
+    "        df = df.sort_values('House ID')\n",
+    "        df.to_csv(self.new_csv_path, index=False)\n",
+    "        \n",
+    "        for image_name, new_image_name in zip(list(range(len(os.listdir(self.new_data_path)))), numbers):\n",
+    "            os.rename(f'{self.new_data_path}/{image_name}.jpg', f'{self.new_data_path}/a{new_image_name}.jpg')\n",
+    "        \n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "id": "ddd5f5b3-6f16-48b4-870c-40555fdbe86d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp = Preprocessing(folder, csv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "id": "0cc28891-30ac-46df-b172-45a3a5dc09f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pp.get_new_images()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "id": "da1751ab-d280-4de3-9d65-6d858c071ccf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pp.get_new_train_csv()"
+    "pp = Preprocessing(folder, csv, folder_with_new_images, csv_for_new_images)\n",
+    "# pp.get_new_images()\n",
+    "# pp.get_new_train_csv()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "216ed2bc-0de2-473d-bf9b-d411889680fa",
+   "id": "da1751ab-d280-4de3-9d65-6d858c071ccf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pp.shuffle_images()"
+   ]
   }
  ],
  "metadata": {
