--- a/new_images.ipynb
+++ b/new_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f1babb53-287c-4224-8a5e-c98ea47b0eb3",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3ae14af4-90ad-47e5-aa74-9bbd826a347b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4327ae7f-9bdc-4de3-8c72-becc06bacd72",
    "metadata": {},
    "outputs": [],
@@ -67,6 +67,7 @@
     "            top_image = np.concatenate((permutation[0], permutation[1]), axis=1)\n",
     "            bottom_image = np.concatenate((permutation[2], permutation[3]), axis=1)\n",
     "            image = np.concatenate((top_image, bottom_image), axis=0)\n",
+    "            image = cv.resize(image, (512, 512))\n",
     "            cv.imwrite(f'{self.new_data_path}/{self.image_nr}.jpg', image)\n",
     "            self.image_nr += 1\n",
     "            \n",
@@ -106,19 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ddd5f5b3-6f16-48b4-870c-40555fdbe86d",
    "metadata": {},
    "outputs": [],
    "source": [
     "pp = Preprocessing(folder, csv, folder_with_new_images, csv_for_new_images)\n",
-    "# pp.get_new_images()\n",
-    "# pp.get_new_train_csv()"
+    "pp.get_new_images()\n",
+    "pp.get_new_train_csv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "da1751ab-d280-4de3-9d65-6d858c071ccf",
    "metadata": {},
    "outputs": [],
